gcc/testsuite/rust/rustc/ui/parser/macro/issue-37234.rs
macro_rules! failed {
    () => {{
        let x = 5 ""; // { dg-error "" "" { target *-*-* } }
    }}
}

fn main() {
    failed!();
}

